refactor source resolving